# kafka-consumer-rust-test

./: Cargo.toml  README.md
.github/workflows/: automated_tests.yml
src/: api.rs  client.rs  consumer.rs  lib.rs  main.rs  producer.rs
