[package]
name = "kafka-consumer-rust"
version = "0.1.0"
edition = "2021"
authors = ["Antonio Masotti"]
repository = "https://github.com/antonio-masotti/kafka-consumer-rust-test"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kafka = "0.9.0"
