[package]
name = "kafka-consumer-rust"
version = "0.1.0"
edition = "2021"
authors = ["Antonio Masotti"]
repository = "https://github.com/antonio-masotti/kafka-consumer-rust-test"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kafka = "0.9.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.1", features = ["full"] }
reqwest = { version = "0.11.13", features = ["json"] }
